# monolito

./: .gitignore  Cargo.toml  config.toml  test_out.txt  test_output.txt
.github/workflows/: ci.yml
crates/core/: Cargo.toml
crates/core/src/: api.rs  channel_utils.rs  clock.rs  command_channel.rs  config.rs  config_watcher.rs  crash_detector.rs  heartbeat.rs  idempotency.rs  journal.rs  kill_switch.rs  large_pages.rs  lib.rs  metrics.rs  portfolio_manager.rs  position_manager.rs  symbol_registry.rs  system_state.rs  threading.rs  validator.rs  ws.rs
crates/engine/: Cargo.toml
crates/engine/src/: api.rs  engine.rs  lib.rs  main.rs  tick_reactor.rs
crates/engine/tests/: arc_swap_concurrency.rs  channel_stress_test.rs  immutability_lint.rs  integration_test.rs  tick_budget_watchdog_test.rs
crates/execution/: Cargo.toml
crates/execution/src/: execution_manager.rs  lib.rs  order_lifecycle.rs  order_state_machine.rs  order_tracker.rs  rate_limiter.rs
crates/feature/: Cargo.toml
crates/feature/src/: computers.rs  feature_engine.rs  lib.rs  window_manager.rs
crates/gateway/: Cargo.toml
crates/gateway/src/: alpaca.rs  alpaca_execution.rs  alpaca_feed.rs  broker_adapter.rs  circuit_breaker.rs  lib.rs
crates/market-data/: Cargo.toml
crates/market-data/src/: feed_monitor.rs  lib.rs  market_data_receiver.rs  normalizer.rs
crates/model/: Cargo.toml
crates/model/src/: inference.rs  lib.rs  model_registry.rs  prediction_engine.rs
crates/risk/: Cargo.toml
crates/risk/src/: lib.rs  portfolio_manager.rs  risk_checks.rs  risk_coordinator.rs
crates/strategy/: Cargo.toml
crates/strategy/src/: cooldown.rs  hysteresis.rs  lib.rs  signal.rs  strategy.rs  strategy_engine.rs  strategy_ext.rs
