[package]
name = "strategy"
version.workspace = true
edition.workspace = true

[dependencies]
unified-trading-core = { path = "../core" }
model = { path = "../model" }
feature = { path = "../feature" }
crossbeam-channel = { workspace = true }
tracing = { workspace = true }
serde = { workspace = true }
arc-swap = { workspace = true }
uuid = { workspace = true }
